CSS fix - margins on narrow screens

--- a/themes/main/static/css/main.css
+++ b/themes/main/static/css/main.css
@@ -201,7 +201,7 @@ ul {
         font-size: 1em;
     }
     .content {
-        max-width: 100%;
+        max-width: 90%;
     }
 }
 
